[package]
name = "rustpractice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
firebase-rs = "2.0.6"
futures = "0.1"
juniper = "0.13.1"
reqwest="0.11.11"
itertools="0.10.5"
serde="1.0.147"
serde_json="1.0"
tokio = { version = "1.21.2", features=["full"]}
url="2.2.2"
dotenv = "0.15.0"
